# Story-Agent

./: .gitattributes  .gitignore  FINAL-HANDOFF.md  HANDOFF.md  README.md  START-STORY-AGENT.cmd  design-qa.md  package-lock.json  package.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/migrations/catalog/: env.py
apps/api/migrations/catalog/versions/: 0001_catalog.py  0002_model_provider.py  0003_model_pricing.py  0004_model_pricing_guards.py  0005_provider_connection_status.py  0006_project_kind.py
apps/api/migrations/project/: env.py  script.py.mako
apps/api/migrations/project/versions/: 0001_project.py  0002_model_runs.py  0003_structured_proposals.py  0004_canon_memory.py  0005_phase4_audit_fixes.py  0006_chapter_pipeline.py  0007_chapter_draft_current.py  0008_automation_foundation.py  0009_automation_audit_fixes.py  0010_trial_ready_workbench.py  0011_plan_node_chapter_beats.py  (+6 more)
apps/api/src/story_agent_api/: __init__.py  config.py  database.py  main.py  model_provider.py  models.py  phase10.py  phase11.py  phase12.py  phase13.py  phase4.py  phase5.py  phase7.py  phase8.py  phase9.py  research_providers.py  schemas.py  secrets.py  services.py
apps/api/tests/: conftest.py  test_backup.py  test_model_config.py  test_model_provider.py  test_phase10_endurance.py  test_phase11_adaptation.py  test_phase12_short_story.py  test_phase13_incubator.py  test_phase4.py  test_phase5.py  test_phase7_automation.py  test_phase8_architecture.py  test_phase8_trial_ready.py  test_phase9_export.py  test_projects.py  test_proposals.py  test_streaming_agent.py
(+77 files in other folders)
