[project]
name = "story-agent-api"
version = "0.1.0"
description = "Local-first data service for Story Agent"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.5,<2",
  "fastapi>=0.116.1,<1",
  "httpx>=0.28.1,<1",
  "pydantic-settings>=2.10.1,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0.43,<3",
  "uvicorn[standard]>=0.35.0,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9",
  "pytest-cov>=6.2.1,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/story_agent_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
